--- a/movies.css
+++ b/movies.css
@@ -1,39 +1,22 @@
-.container {
-    width: 1000px;
-    max-height: 1000px;
-    margin: 10px;
-    border: 1px solid #fff;
-    background-color: #ffffff;
-    box-shadow: 0px 2px 7px #292929;
-    -moz-box-shadow: 0px 2px 7px #292929;
-    -webkit-box-shadow: 0px 2px 7px #292929;
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
+body {
+  background-color: #CCCCCC;
 }
 .mainbody,
-.header,
-.footer {
-    padding: 5px;
+.header {
+    padding: 10px;
 }
 .mainbody {
     margin-top: 0;
-    min-height: 500px;
-    max-height: 1000px;
-    overflow: auto;
+    background-color: #F5F5DC;
 }
 .header {
     border-bottom: 5px solid red;
     background-color: #ffffff;
     height: 90px;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
 }
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 200px 200px 200px 200px;
     background-color: transparent;
     padding: 100px;
 }
@@ -45,8 +28,8 @@
 
 .img-item {
     padding: 5px;
-    width: 250px;
-    height: 300px;
+    width: 150px;
+    height: 200px;
 }
 
 .topnav {
@@ -75,7 +58,34 @@
   color: white;
 }
 
-.header img, .header .topnav {
+.header img, .header .topnav, .header p {
     display: inline-block;
     vertical-align: middle;
  }
+
+ .user{
+    position: relative;
+     top: 0px;
+    right: 0px; 
+    color:#FF8C00;
+ }
+
+ input[type=text] {
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    display: block;
+    margin : 0 auto;
+    width: 700px;
+}
+
+hr {
+    border: 0;
+    border-top: 1px solid #808080;
+    width: auto;
+}
+.titles{
+    color:#FF8C00;
+}
+.empty_data_text{
+    color: #D3D3D3;
+}
